# screenlocker

./: .gitignore  CLAUDE.md  CMakeLists.txt
screenlocker/: CMakeLists.txt  application.cpp  main.cpp
screenlocker/qml/: LockScreen.qml  MprisItem.qml
translations/: tg_TJ.ts
